Update pre-commit hooks to specific versions

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,7 +1,7 @@
 repos:
 
 - repo: https://github.com/gruntwork-io/pre-commit
-  rev: <VERSION> # Get the latest from: https://github.com/gruntwork-io/pre-commit/releases
+  rev: v0.1.23  # Get the latest from: https://github.com/gruntwork-io/pre-commit/releases
   hooks:
     - id: tflint
       args:
@@ -11,21 +11,30 @@ repos:
     - id: terraform-validate
     - id: terraform-fmt
 
-- repo: git://github.com/antonbabenko/pre-commit-terraform
-  rev: <VERSION> # Get the latest from: https://github.com/antonbabenko/pre-commit-terraform/releases
-  hooks:
-    - id: terraform_tfsec
-    - id: terraform_docs
-    - id: checkov
+# - repo: git://github.com/antonbabenko/pre-commit-terraform
+#   rev: v1.89.0 # Get the latest from: https://github.com/antonbabenko/pre-commit-terraform/releases
+#   hooks:
+#     - id: terraform_tfsec
+#     - id: terraform_docs
+#     - id: checkov
 
 - repo: https://github.com/pre-commit/pre-commit-hooks
   rev: v4.0.1
   hooks:
     - id: trailing-whitespace
 
-hooks:
-      - id: script
-        name: script
-        entry: ../python_custom_hook.py
-        language: python
-        pass_filenames: false
+- repo: local
+  hooks:
+    - id: terraform-custom-hook
+      name: terraform-custom-hook
+      entry: python3 python_custom_hook.py
+      language: python
+      pass_filenames: false
+
+- repo: local
+  hooks:
+    - id: custom-script-sh
+      name: custom-script-sh
+      entry: bash_custom_hook.sh
+      language: script
+      pass_filenames: false
