--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -13,3 +13,19 @@ repos:
     - id: checkov
     - id: terrascan
     - id: terraform_tfsec
+
+- repo: local
+  hooks:
+    - id: terraform-custom-hook
+      name: terraform-custom-hook
+      entry: python3 python_custom_hook.py
+      language: python
+      pass_filenames: false
+
+- repo: local
+  hooks:
+    - id: custom-script-sh
+      name: custom-script-sh
+      entry: bash_custom_hook.sh
+      language: script
+      pass_filenames: false
