--- a/3_TERRAFORM_ANSIBLE_OPENVPN/ansible/roles/openvpn-client/defaults/main.yml
+++ b/3_TERRAFORM_ANSIBLE_OPENVPN/ansible/roles/openvpn-client/defaults/main.yml
@@ -1,8 +1,7 @@
 ---
 # defaults file for roles/openvpn-client
 vpn_user_list:
-  - bakary
-  - seydou
+  - bakaryseydou
 vpn_destination_key: "/tmp/"
 vpn_server_name: "infovpn"
 
