--- a/3_TERRAFORM_ANSIBLE_OPENVPN/ansible/roles/openvpn-server/tasks/main.yml
+++ b/3_TERRAFORM_ANSIBLE_OPENVPN/ansible/roles/openvpn-server/tasks/main.yml
@@ -102,15 +102,34 @@
     path: "{{ ansible_env.HOME }}/openvpn-ca/pki/ta.key"
   register: ta_key_exists
 
+# - name: Create ta.key file
+#   become: true
+#   become_user: root
+#   ansible.builtin.shell: >
+#     openvpn --genkey --secret ta.key;
+#   args:
+#     chdir: "{{ ansible_env.HOME }}/openvpn-ca/pki/"
+#     executable: /bin/bash
+#   when: not ta_key_exists.stat.exists
+
 - name: Create ta.key file
   become: true
   become_user: root
   ansible.builtin.shell: >
     openvpn --genkey --secret ta.key;
   args:
-    chdir: "{{ ansible_env.HOME }}/openvpn-ca/pki/"
+    chdir: /home/debian/openvpn-ca/pki/
     executable: /bin/bash
   when: not ta_key_exists.stat.exists
+
+- name: Change ta.key permission to allow copy from below tasks
+  become: true
+  become_user: root
+  ansible.builtin.file:
+    path:  /home/debian/openvpn-ca/pki/ta.key
+    state: file
+    mode: '0644'
+    owner: debian
 
 - name: Copy certificates to /etc/openvpn
   become: true
